@startuml convert.status.log

' config includes
!include ../../config/macros.iuml
!include ../../config/styles.iuml

' diagram imcludes
!include ../../GameCommunication/packages/convert.puml

' class diagram (https://plantuml.com/class-diagram)
$package(plaintext.convert.status.log) {
    class LogWallCellStatusSerializer {
        + serialize(wallStatus: WallCellStatus): String
    }
    communication.convert.Serializer <|.. LogWallCellStatusSerializer : <<bind>> <T -> WallCellStatus>

    class LogUnknownCellStatusSerializer {
        + serialize(unknownStatus: UnknownCellStatus): String
    }
    communication.convert.Serializer <|.. LogUnknownCellStatusSerializer : <<bind>> <T -> UnknownCellStatus>
}

@enduml
